[project]
name = "llm-youtube"
version = "0.1"
description = "LLM plugin for fetching YouTube video transcripts"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.7"
dependencies = [
    "llm",
    "youtube-transcript-api",
]

[project.entry-points.llm]
youtube = "llm_youtube"

[project.urls]
Homepage = "https://github.com/yourusername/llm-youtube"
Issues = "https://github.com/yourusername/llm-youtube/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
]